# ScoreBox

./: .gitignore  LICENSE.md  README.md  ScoreBox.py  config.py  create_table.py  main.py  requirements.txt  requirements_dev.txt  setup.cfg
scorebox/: create_table.py
src/scorebox/: config.py  connect.py  scorebox.kv  scoreimporter.py
tests/: test_import.py
tests/data/: testsheet.xlsx  ~$testsheet.xlsx
