[metadata]
name = scorebox
version = '0.0.1'
description = A tool to collect and input baseball stats into a database.
author = John Davenport
license = MIT
license_file = LICENSE.md
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    scorebox
install_requires =
    kivy>=2.0.0
    psycopg2>=2.9.1
    pandas>=1.3.4
    openpyxl>=3.0.9
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    mypy>=0.910

[options.package_data]
slapping = py.typed
